testsuite/tests/typecheck/should_run/T16453T.hs
module T16453T where
main = putStrLn "T16453T"
