testsuite/tests/typecheck/should_fail/T16453S.hs
module T16453S where
main = putStrLn "T16453S"
